--- a/src/about.css
+++ b/src/about.css
@@ -1,5 +1,5 @@
 .about_main {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -13,6 +13,7 @@
 }
 .about_page {
   display: flex;
+  gap: 1%;
   max-width: 1140px;
   width: 100%;
   /* height: 70%; */
@@ -28,8 +29,8 @@
   width: 30%;
 }
 .about_img {
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  height: fit-content;
   border-radius: 50%;
   margin-bottom: 20px;
 }
@@ -44,7 +45,7 @@
   gap: 10px;
 }
 .about_right {
-  width: 70%;
+  width: 69%;
   text-align: left;
 }
 .about_intro {
@@ -87,6 +88,108 @@
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 .resume_about:hover {
-background-color: rgb(43, 43, 43);
-color: #edeeef;
+  background-color: rgb(43, 43, 43);
+  color: #edeeef;
 }
+@media (max-width: 1124px) {
+  .about_page {
+    max-width: 90%;
+  }
+  .about_intro {
+    font-size: 15px;
+  }
+  .about_name {
+    font-size: 22px;
+  }
+  .about_minor {
+    font-size: 15px;
+  }
+}
+@media (max-width: 845px) {
+  .about_name {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 50px;
+    right: 0;
+    left: 0;
+  }
+  .about_page {
+    padding: 100px 0;
+  }
+  .path_above {
+    font-size: 45px;
+  }
+}
+@media (max-width: 745px) {
+  .about_page {
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    padding: 100px 0 50px 0;
+  }
+  .about_left {
+    width: 50%;
+  }
+  .about_right {
+    text-align: center;
+    width: 100%;
+  }
+}
+@media (max-width: 540px) {
+  .about_name {
+    width: 60%;
+    text-align: center;
+    position: absolute;
+    top: 50px;
+    margin: auto;
+    margin-bottom: 20px;
+  }
+  .ii {
+    display: none;
+  }
+  .about_page {
+    padding: 150px 0 50px 0;
+  }
+  .path_above {
+    font-size: 40px;
+  }
+}
+@media (max-width: 480px) {
+  .path_above {
+    font-size: 30px;
+  }
+}
+@media (max-width: 540px) {
+  .about_name {
+    width: 80%;
+
+  }}
+@media (max-width: 380px) {
+  .paths {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 20px;
+  }
+  .about_path {
+    padding: 10px 45px;}
+    
+  }
+  @media (max-width: 340px)  {
+    .path_above {
+      font-size: 25px;
+    }
+  }
+  @media (max-width: 324px)  {
+    .about_name {
+      width: 100%;
+      text-align: center;
+      position: absolute;
+      top: 50px;
+      margin: auto;
+      margin-bottom: 20px;
+    }
+    .about_path {
+      padding: 10px 25px;}
+  }
