--- a/src/header.css
+++ b/src/header.css
@@ -1,5 +1,5 @@
 .header_alt {
-  width: 100vw;
+  width: 100%;
   height: 50px;
   position: fixed;
   top: 0;
@@ -62,4 +62,71 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.none {
+  display: none;
+}
+@media (max-width: 1184px) {
+  .header {
+    max-width: 90%;
+  }
+  .name {
+    font-size: 30px;
+  }
+  .list {
+    font-size: 18px;
+  }
+}
+@media (max-width: 900px) {
+  .header {
+    justify-content: center;
+  }
+  .header .name {
+    display: none;
+  }
+  .list {
+    width: 100%;
+    max-width: 90% !important;
+    font-size: 18px;
+  }
+}
+@media (max-width: 540px) {
+  .header {
+    justify-content: space-between;
+    height: 40px;
+    transform: none;
+    margin-top: auto;
+    font-size: 18px !important;
+  }
+  .menuBar {
+    display: block;
+    border: none;
+    box-shadow: none;
+    background-color: transparent;
+    color: white;
+  }
+
+  .header .name {
+    display: block;
+    font-size: 25px;
+  }
+  .list {
+    width: 100%;
+    max-width: 90% !important;
+    font-size: 18px;
+    display: none;
+  }
+}
+@media (max-width: 480px) {
+  .header_alt {
+    height: 40px;
+  }
+  .header .name {
+    font-size: 22px;
+  }
+}
+@media (max-width: 320px) {
+  .header .name {
+    font-size: 19px;
+  }
 }
