--- a/src/about.css
+++ b/src/about.css
@@ -37,9 +37,7 @@
 .about_logo_path {
   color: #000000;
 }
-.about_logo_path:hover {
-  transform: scale(1.1);
-}
+
 .socials {
   display: flex;
   gap: 10px;
@@ -87,10 +85,7 @@
   background: darkgray;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
-.resume_about:hover {
-  background-color: rgb(43, 43, 43);
-  color: #edeeef;
-}
+
 @media (max-width: 1124px) {
   .about_page {
     max-width: 90%;
@@ -163,8 +158,8 @@
 @media (max-width: 540px) {
   .about_name {
     width: 80%;
-
-  }}
+  }
+}
 @media (max-width: 380px) {
   .paths {
     display: flex;
@@ -173,23 +168,33 @@
     gap: 20px;
   }
   .about_path {
-    padding: 10px 45px;}
-    
+    padding: 10px 45px;
   }
-  @media (max-width: 340px)  {
-    .path_above {
-      font-size: 25px;
-    }
+}
+@media (max-width: 340px) {
+  .path_above {
+    font-size: 25px;
   }
-  @media (max-width: 324px)  {
-    .about_name {
-      width: 100%;
-      text-align: center;
-      position: absolute;
-      top: 50px;
-      margin: auto;
-      margin-bottom: 20px;
-    }
-    .about_path {
-      padding: 10px 25px;}
+}
+@media (max-width: 324px) {
+  .about_name {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 50px;
+    margin: auto;
+    margin-bottom: 20px;
   }
+  .about_path {
+    padding: 10px 25px;
+  }
+}
+@media (min-width: 769px) {
+  .about_logo_path:hover {
+    transform: scale(1.1);
+  }
+  .resume_about:hover {
+    background-color: rgb(43, 43, 43);
+    color: #edeeef;
+  }
+}
